# boatwatch

./: .gitignore  README.md  gradle.properties  settings.gradle.kts  spec.md
autopilot/: build.gradle.kts
autopilot/src/main/: AndroidManifest.xml
autopilot/src/main/java/uk/co/tfd/boatwatch/autopilot/: MainActivity.kt
autopilot/src/main/java/uk/co/tfd/boatwatch/autopilot/network/: AutopilotHttpClient.kt  BleAutopilotClient.kt  FakeAutopilotClient.kt  HttpAutopilotClient.kt  ServerDiscovery.kt
autopilot/src/main/java/uk/co/tfd/boatwatch/autopilot/presentation/: MainScreen.kt  SettingsScreen.kt  Theme.kt  WatchApp.kt
autopilot/src/main/java/uk/co/tfd/boatwatch/autopilot/protocol/: AutopilotState.kt  BinaryAutopilotProtocol.kt  RaymarineN2K.kt  RaymarineState.kt  SeaSmartCodec.kt  TransportMode.kt
autopilot/src/main/java/uk/co/tfd/boatwatch/autopilot/viewmodel/: AutopilotViewModel.kt
autopilot/src/main/res/drawable/: ic_autopilot_option1.xml  ic_autopilot_option2.xml  ic_autopilot_option3.xml  ic_autopilot_option4.xml  ic_autopilot_option5.xml
battery/: build.gradle.kts
battery/src/main/: AndroidManifest.xml
battery/src/main/java/uk/co/tfd/boatwatch/battery/: MainActivity.kt
battery/src/main/java/uk/co/tfd/boatwatch/battery/data/: BatteryDataSource.kt  BatteryState.kt  (+7 more)
battery/src/main/res/drawable/: ic_battery_option1.xml  ic_battery_option2.xml  ic_battery_option3.xml  ic_launcher_background.xml
docs/: ble-transport.md  p70-ev1-control-analysis.md
mock-firmware/: ble_probe.py  ble_server.py  mock_firmware.py  pyproject.toml  test_services.py
(+5 files in other folders)
