[project]
name = "mock-firmware"
version = "0.1.0"
description = "Mock ESP32 firmware HTTP server for BoatWatch app development"
requires-python = ">=3.11"
dependencies = [
    "zeroconf>=0.131.0",
 "bleak>=0.22.0",
 "pyobjc-framework-CoreBluetooth>=10.0",
 "pyobjc-framework-libdispatch>=10.0",
]

[project.scripts]
mock-firmware = "mock_firmware:main"
